--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "config": {
+    "nuxt": {
+    "port": "4000"
+    } 
+    },
   "name": "BuildVue",
   "version": "1.0.0",
   "private": true,
@@ -14,6 +19,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
